# wish-list-app

back/: pyproject.toml
back/app/: main.py
back/back/: main.py
front/: app.vue  package-lock.json  package.json
